--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,8 @@
     "php": ">=7.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^4.1",
-    "mockery/mockery": "^1.0"
+    "phpunit/phpunit": "~6.0",
+    "mockery/mockery": "~1.2"
   },
   "autoload": {
     "psr-4": {
